# camera_client

./: CMakeLists.txt  Main.qml  README.md  main.cpp
Config/: CMakeLists.txt  Config.qml  datahandler.cpp  datahandler.h  registertoqml.cpp  registertoqml.h  signalmanager.cpp  signalmanager.h
Controller/: CMakeLists.txt  myimageprovider.cpp  myimageprovider.h  tcpclient.cpp  tcpclient.h
